--- a/partials/header.html
+++ b/partials/header.html
@@ -29,7 +29,7 @@
                                     <a class="item" href="./portfolio/projets/1">
                                         Projets
                                     </a>
-                                    <a class="item" href="./portfolio/competences">
+                                    <a class="item" href="/competences.html">
                                         Compétences
                                     </a>
                                     <a class="item" href="./portfolio/veille">
