--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ PAGE COMPETENCES
     width: 70%;
     display: flex;
     justify-content: space-between;
+    align-content: flex-start;
     flex-wrap: wrap;
 }
 
@@ -180,6 +181,7 @@ PAGE COMPETENCES
     border: rgba(110, 109, 109, 0.3) 2px solid;
     border-radius: 3px;
     padding: 3px;
+    margin-bottom: 12px;
 }
 
 .projetContainer > .projetCard > .imgContainer{
