--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,10 @@ PAGE PROJETS
     flex-direction: column;
 }
 
+.projetContainerData > .preuveContainer{
+    display : none;
+}
+
 .projetContainerData > .preuveContainer > .imgHide{
     width: 40%;
     height: 100%;
